--- a/package.json
+++ b/package.json
@@ -4,18 +4,39 @@
   "description": "Electron Ping Application",
   "main": "src/main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "build": "electron-builder"
   },
   "keywords": [
     "electron",
     "ping"
   ],
-  "author": "",
+  "author": "Karlos Berrios",
+  "license": "ISC",
+  "build": {
+    "appId": "com.proping.monitor",
+    "productName": "ProPing Monitor",
+    "copyright": "Copyright © 2024 Karlos Berrios",
+    "files": [
+      "src/**/*",
+      "package.json"
+    ],
+    "win": {
+      "target": "nsis",
+      "icon": "build/icon.ico"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "perMachine": false
+    }
+  },
   "license": "ISC",
   "dependencies": {
     "ping": "^0.4.4"
   },
   "devDependencies": {
-    "electron": "^28.0.0"
+    "electron": "^28.0.0",
+    "electron-builder": "^26.4.0"
   }
 }
